vault/vault_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: vault
  name: vault
