vault/vault_ingress_route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: testvault
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`testvault.10.237.198.16.xip.io`)
      kind: Rule
      services:
        - name: vault
          port: 8200
          namespace: vault
